Fix : alignement vertical de la page infrarouge

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -110,3 +110,7 @@
 	text-align: center;
 }
 
+#div_infrarouge_Couverture {
+	height: 190px;
+}
+
